solc_mutator_ossfuzz_seed_corpus/test_sol/test_e20f98821d3610823c2ff1de5b0e8f128f17a32f79dfe369bb7583ccfce2f8aa_54244b9f5b845979c133ae61635d8bb5880b7759_sol.sol
==== Source:  ====

==== Source: su0.sol ====
bytes26 constant cons0 = bytes26((bytes20(bytes1(0xff)) & bytes20(address(0x0000000000000000000000000000000000000000))));
function f0()     returns(uint64 o0)
{
}
error er0(uint224 ep0);
library L0 {
  event ev0(int168  ep0, bool[]  ep1, bytes  ep2);
  int232 public constant cons1 = ((int232(int56(-17283271982257309)) + (~((~(int232(3450873173395281893717377931138512726225554486085193277581262111899647)))))) ** uint72(3776645369763935301231));
  using L0 for *;
  function f1() internal    returns(uint40 o0,bool o1)
  {
    assembly
    {
      {
      }
      switch 0
      case 115792089237316195423570985008687907853269984665640564039457584007913129639935
      {
        if o0
        {
          o0 := o0
        }
      }
      case 47137386248734690842315145990165691188419740660711611065995941834106242092579
      {
        o0 := o0
        o1 := byte(o1, 40866657674347210363912173106771849504320943300279938457374016174562827113251)
      }
      case 115792089237316195423570985008687907853269984665640564039457584007913129639935
      {
        for 
        {
          o0 := o0
          o0 := o0
        }
        115792089237316195423570985008687907853269984665640564039457584007913129639935
        {
          o1 := o1
        }
        {
          for 
          {
            {
              return(30749034114473435869447840025344682901009853177175617871280750130233839205661, o1)
              let al0 := o1
            }
          }
          o1
          {
            pop(o0)
            o1 := mload(mod(o0, 2048))
          }
          {
          }
        }
      }
      default
      {
        function af0(ai0, ai1, ai2, ai3)
        {
          ai0 := ai3
        }
      }
      return(returndatasize(), 0)
    }
  }
  type T0 is bytes23;
  event ev1(bytes  ep0, bytes17  ep1, int248  ep2);
}
enum EN0 {
  M0, M1, M2, M3, M4, M5, M6, M7,
  M8, M9, M10, M11, M12, M13, M14, M15,
  M16, M17, M18, M19, M20, M21, M22, M23,
  M24, M25, M26, M27, M28, M29, M30, M31,
  M32, M33, M34, M35, M36, M37, M38, M39,
  M40, M41, M42, M43, M44, M45, M46, M47,
  M48, M49, M50, M51, M52, M53, M54, M55,
  M56, M57, M58, M59, M60, M61, M62, M63,
  M64, M65, M66, M67, M68, M69, M70, M71,
  M72, M73, M74, M75, M76, M77, M78, M79,
  M80, M81, M82, M83, M84, M85, M86, M87,
  M88, M89, M90, M91, M92, M93, M94, M95,
  M96, M97, M98, M99, M100, M101, M102, M103,
  M104, M105, M106, M107, M108, M109, M110, M111,
  M112, M113, M114, M115, M116, M117, M118, M119,
  M120, M121, M122, M123, M124, M125, M126, M127,
  M128, M129, M130, M131, M132, M133, M134, M135,
  M136, M137, M138, M139, M140, M141, M142, M143,
  M144, M145, M146, M147, M148, M149, M150, M151,
  M152, M153, M154, M155, M156, M157, M158, M159,
  M160, M161, M162, M163, M164, M165, M166, M167,
  M168, M169, M170, M171, M172, M173, M174, M175,
  M176, M177, M178, M179, M180, M181, M182, M183,
  M184, M185, M186, M187, M188, M189, M190, M191,
  M192, M193, M194, M195, M196, M197, M198, M199,
  M200, M201, M202, M203, M204, M205, M206, M207,
  M208, M209, M210, M211, M212, M213, M214, M215,
  M216, M217, M218, M219, M220
}
pragma solidity >= 0.0.0;
using L0 for uint;
// ----
// DeclarationError 6792: (su0.sol:964-1599): Duplicate case "115792089237316195423570985008687907853269984665640564039457584007913129639935" defined.
